# analyte-efo-mapper

./: .gitignore  pyproject.toml
.github/workflows/: pages.yml
analyte_efo_mapper/: __init__.py  _map_measurement_efo.py  cli.py
docs/: README.md  index.html  input_template.tsv
skills/pqtl-measurement-mapper/: SKILL.md
skills/pqtl-measurement-mapper/scripts/: map_measurement_efo.py
